--- a/Backend/Emails/EmailTemplates/RestorePasswordTemplate.html
+++ b/Backend/Emails/EmailTemplates/RestorePasswordTemplate.html
@@ -29,7 +29,7 @@
             <tr>
               <td colspan="2" style="text-align: center;">
                 <p>
-                  Zabudnuté heslo si môžete obnoviť cez tento <a href='{{restorePasswordLink}}'>odkaz</a>. Pokiaľ ste o zmenu hesla
+                  Zabudnuté heslo si môžete obnoviť cez tento <a href='{{confirmationLink}}'>odkaz</a>. Pokiaľ ste o zmenu hesla
                   nežiadali nemusíte nič riešiť.
                 </p>
               </td>
