#171 Edit mail text

--- a/Backend/Emails/EmailTemplates/ConfirmEmailTemplate.html
+++ b/Backend/Emails/EmailTemplates/ConfirmEmailTemplate.html
@@ -20,12 +20,12 @@
               </td>
             </tr>
             <tr>
-              <td colspan="2"><h2>Výmena predmetov</h2></td>
+              <td colspan="2"><h2>Tvoja výmena prebehla úspešne</h2></td>
             </tr>
             <tr class="spacer" style="padding: 20px; display: block"><td colspan="2"></td></tr>
             <tr>
               <td colspan="2" style="text-align: center;">
-                <p>Podarilo sa nám nájsť zhodu pre tvoju výmenu. Pre viac informácii sa prihlás do aplikácie <a href='{{confirmationLink}}'>odkaz</a>.</p>
+                <p>Ak si chceš pozrieť viac informácii o tvojej výmene prihlás sa, alebo klikni na tento <a href='{{confirmationLink}}'>odkaz</a>.</p>
               </td>
             </tr>
             <tr class="spacer" style="padding: 20px; display: block"><td colspan="2"></td></tr>
