#171 Adding a template and some new logic

--- a/Backend/Emails/EmailTemplates/ConfirmationExchangeTemplate.html
+++ b/Backend/Emails/EmailTemplates/ConfirmationExchangeTemplate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="svk">
 <head>
-  <title>Restore password template</title>
+  <title>Confirm exchange template</title>
 </head>
 <body>
   <table id="outer_tbl" style="width: 100%; font-family: Roboto; font-size: 22px; font-weight: 300; border: 0; text-align: center; display: inline-table">
@@ -20,15 +20,12 @@
               </td>
             </tr>
             <tr>
-              <td colspan="2"><h2>Zabudnuté heslo</h2></td>
+              <td colspan="2"><h2>Tvoja výmena prebehla úspešne</h2></td>
             </tr>
             <tr class="spacer" style="padding: 20px; display: block"><td colspan="2"></td></tr>
             <tr>
               <td colspan="2" style="text-align: center;">
-                <p>
-                  Zabudnuté heslo si môžete obnoviť cez tento <a href='{{confirmationLink}}'>odkaz</a>. Pokiaľ ste o zmenu hesla
-                  nežiadali nemusíte nič riešiť.
-                </p>
+                <p>Ak si chceš pozrieť viac informácii o tvojej výmene prihlás sa, alebo klikni na tento <a href='{{confirmationLink}}'>odkaz</a>.</p>
               </td>
             </tr>
             <tr class="spacer" style="padding: 20px; display: block"><td colspan="2"></td></tr>
